# FogX-Store

./: .gitignore  README.md  compose.yml  pyproject.toml
annotation/: fogx_annotation.py  requirements.txt
application/: app.py  test_open.py  without_step.pickle
application/templates/: display.html  home.html  index.html
collectorfox/collectorfox/: collector.py  requirements.txt  test_collector.ipynb
collectorfox/collectorfox/ucsd_pick_and_place_dataset_converted_externally_to_rlds/_transactions/: 0-17a3ff1e-8cec-41e8-b352-3200b0395ae5.txn
collectorfox/collectorfox/ucsd_pick_and_place_dataset_converted_externally_to_rlds/data/: 67d9a11a-2603-4b35-8159-f52b8f9d1710.lance
examples/: example_client.py  example_fogx_collector.py  example_server.py
fogxstore/client/: __init__.py  storeclient.py
fogxstore/server/: __init__.py  dataset.py  query.py  schema.py  store.py
fox/: compose.yaml
fox/collectorfox/: Dockerfile  annotation_impl.py  api.py  app.py  collector.py  dataset_def.py  requirements.txt  test_collector.ipynb  transformation_impl.py
fox/collectorfox/annotation/: __init__.py  base_annotator.py  clip.py  text.py
fox/collectorfox/dataset/: __init__.py  dataset.py
fox/collectorfox/lerobot/: openx_rlds_format.py  utils.py
fox/collectorfox/lerobot/openx/: transforms.py
fox/collectorfox/test/_transactions/: 0-7d4aab63-4e79-4c9b-bbc6-1dfe5ed9e28b.txn
fox/collectorfox/test/data/: 49b17189-53ee-45f2-801b-57fa8d651b00.lance
fox/collectorfox/transformation/: __init__.py  ar_transformation.py  base_transformation.py  lerobot.py  rtx.py
fox/predatorfox/: Cargo.toml  Dockerfile
fox/predatorfox/data/sample-lancedb/empty_table.lance/_transactions/: 0-383aed6b-cf11-457a-ba27-3e7a6ee9d793.txn
fox/predatorfox/src/: build.rs  cmd.proto  flight.rs  main.rs  predatorfox.rs
predatorfox/: Cargo.toml
predatorfox/src/: dataset.rs  flight.rs  main.rs  predatorfox.rs
skulk/: Cargo.toml  Dockerfile  pyproject.toml
skulk-client/: pyproject.toml
skulk-client/examples/: example_client.py  example_server.py
skulk-client/skulk-client/: __init__.py
skulk-client/skulkclient/: client.py
skulk-client/skulkclient/predatorfox/: cmd_pb2.py
skulk/client/: storeclient.py
skulk/core/: query.py  schema.py
skulk/examples/: example_client.py  example_predatorfox_client.py
skulk/server/: store.py
skulk/skulk/client/: storeclient.py
skulk/skulk/core/: dataset.py
skulk/skulk/server/: __init__.py  store.py
skulk/src/: build.rs  catalog.proto  catalog.rs  cmd.proto  flight.rs  main.rs  predatorfox.rs
tests/: Dockerfile  example_client.py  example_dataset_discovery.py  integration_test.sh  prepare_data.py  requirements.txt  test_client.py
tests/datasets/: demo_ds_1.parquet
tests/datasets/test.lance/_transactions/: 0-2019015c-6c67-4835-b798-78477ecd285d.txn
tests/datasets/test.lance/data/: 28b12e02-8776-4bd6-baf8-738680384465.lance
tests/skulkclient/: __init__.py  client.py
tests/skulkclient/predatorfox/: client.py  cmd_pb2.py  cmd_pb2.pyi
