[tool.poetry]
name = "skulk"
version = "0.1.0"
description = "This is a store service that collects and serves large robotics datasets."
authors = ["J-HowHuang <jhow@cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pylance = "^0.10.13"
fog-x = {path = "../fog_x", extras = ["rtx"], develop = true}
duckdb = "^0.10.2"


[tool.poetry.group.test.dependencies]
pytest = "8.0.0"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
