[package]
name = "predatorfox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
flate2 = "1.0.33"
google-cloud-auth = "0.17.0"
google-cloud-storage = "0.22.0"
log = "0.4.22"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
serde_yaml = "0.9.34"
tokio = "1.40.0"
