[package]
name = "skulk"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
arrow-flight = "52.2.0"
arrow-ipc = "53.0.0"
arrow-schema = "53.0.0"
axum = "0.7.6"
duckdb = { version = "1.0.0", features = ["bundled"] }
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
prost = "0.13.2"
tokio = "1.40.0"
tonic = "0.11.0"

[build-dependencies]
prost-build = "0.13.2"
