[package]
name = "predatorfox"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "52.2.0"
arrow-flight = "52.2.0"
arrow-schema = "52.2.0"
env_logger = "0.11.5"
flate2 = "1.0.33"
futures = "0.3.30"
lancedb = "0.10.0"
log = "0.4.22"
serde_yaml = "0.9.34"
tokio = "1.40.0"
tonic = "0.11.0"
prost = "0.13.2"
bytes = "1.7.2"

[build-dependencies]
prost-build = "0.13.2"

[env]
CARGO_LOG = "debug"